# IotaWatt_PostgREST

./: .env.template  .envrc  .gitignore  Makefile  README.md  SETUP.md  compose.yml  docker-compose.yml  generate_jwt.py  init_db.sh  jwtutil.py  proxy.py  pyproject.toml  show_db.py  test.sh  upload_sample.py
devops/: install.sh
devops/quadlets/: postgrest.container.template  timescale.container.template  timescale.network  timescale.volume
